examples/error/NoMain.c
void funzione(){
	int a;

	a = 5;

}
